# https://stackoverflow.com/q/76248637 (this is why setup.cfg/setup.py are still relevant !)
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# https://setuptools.pypa.io/en/latest/userguide/datafiles.html

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
