[metadata]
name = asyncpal
version = file: VERSION
url = https://github.com/pyrustic/asyncpal
author = Pyrustic Evangelist
author_email = rusticalex@yahoo.com
maintainer = Pyrustic Evangelist
maintainer_email = rusticalex@yahoo.com
description = Preemptive concurrency and parallelism for sporadic workloads
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords =
    application
    pyrustic
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers

[options]
python_requires = >=3.5
packages = find:
include_package_data = true
zip_safe = false

[options.entry_points]
console_scripts =
    asyncpal = asyncpal.__main__:main
